fixed layout problems

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,17 +1,20 @@
 @charset "UTF-8";
 /* CSS Document */
 
-html,
-body,
-#react-entry-point,
-#dash-root {
+/* html,
+body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-}
+} */
 
+/* #react-entry-point, */
+#dash-root {
+    width: 100%;
+    height: 100%;
+}
 
 .asideaside {
     padding: 0 6px 6px 6px;
@@ -31,7 +34,8 @@ main {
     display: flex;
     flex-direction: column;
     flex: 1;
-    height: calc(100vh - 40px);
+    /* height: calc(100% - 40px); */
+    height: 100%;
     padding-top: 6px;
     padding: 6px 8px 6px 8px;
 }
@@ -43,7 +47,7 @@ main {
 .tab-content {
     /* flex: 1; */
     margin: 4px;
-    /* overflow-y: auto; */
+    overflow-y: auto;
     /* max-height: 100%; */
 }
 
@@ -71,7 +75,7 @@ main {
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    height: calc(100vh - 40px);
+    height: calc(100% - 40px);
     width: 100%;
 }
 
@@ -193,7 +197,7 @@ td.CalendarDay {
     display: none;
 }
 
-
+/* ################################################## */
 
 footer,
 #navbar {
